# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import roomsRouter from "./rooms";
+import matchmakingRouter from "./matchmaking";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use("/rooms", roomsRouter);
+router.use("/matchmaking", matchmakingRouter);
 
 export default router;
